[gd_scene load_steps=40 format=3 uid="uid://bkpsccum4qsi6"]

[ext_resource type="Script" uid="uid://buvaj0kc7nrd8" path="res://scenes/scripts/ghost.gd" id="1_s5pdv"]
[ext_resource type="Texture2D" uid="uid://hxg746ne1ri2" path="res://assets/tiles/Enemies/Sprites_Skeleton-Mage/Death_64x64.png" id="1_xrxcc"]
[ext_resource type="Texture2D" uid="uid://d2ytu76ow8qtg" path="res://assets/tiles/Enemies/Sprites_Skeleton-Mage/Attack_2_64x64.png" id="2_s5pdv"]
[ext_resource type="Texture2D" uid="uid://bw8jbn4h0ok4r" path="res://assets/tiles/Enemies/Sprites_Skeleton-Mage/Walk_64x64.png" id="3_75fd3"]
[ext_resource type="Texture2D" uid="uid://dvnmfefpahhh0" path="res://assets/tiles/Enemies/Sprites_Skeleton-Mage/Idle_64x64.png" id="4_qsnke"]

[sub_resource type="AtlasTexture" id="AtlasTexture_stpnr"]
atlas = ExtResource("1_xrxcc")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ni46"]
atlas = ExtResource("1_xrxcc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjfvf"]
atlas = ExtResource("1_xrxcc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wlvx"]
atlas = ExtResource("1_xrxcc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_paflj"]
atlas = ExtResource("2_s5pdv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttocm"]
atlas = ExtResource("2_s5pdv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ram"]
atlas = ExtResource("2_s5pdv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rt3w"]
atlas = ExtResource("2_s5pdv")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqks1"]
atlas = ExtResource("2_s5pdv")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob1di"]
atlas = ExtResource("2_s5pdv")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb20f"]
atlas = ExtResource("2_s5pdv")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfj7w"]
atlas = ExtResource("2_s5pdv")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnf8i"]
atlas = ExtResource("2_s5pdv")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgqoy"]
atlas = ExtResource("2_s5pdv")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4no3"]
atlas = ExtResource("3_75fd3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjkgj"]
atlas = ExtResource("3_75fd3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i1va"]
atlas = ExtResource("3_75fd3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk8c2"]
atlas = ExtResource("3_75fd3")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2em2"]
atlas = ExtResource("4_qsnke")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox62s"]
atlas = ExtResource("4_qsnke")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i23y6"]
atlas = ExtResource("4_qsnke")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pas7m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stpnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ni46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjfvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wlvx")
}],
"loop": false,
"name": &"arise",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_paflj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttocm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ram")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rt3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqks1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob1di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb20f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfj7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnf8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgqoy")
}],
"loop": false,
"name": &"attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4no3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjkgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i1va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk8c2")
}],
"loop": false,
"name": &"chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2em2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox62s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i23y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wlvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjfvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ni46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stpnr")
}],
"loop": false,
"name": &"stop",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s5pdv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_55jtl"]
radius = 60.0
height = 120.0

[sub_resource type="Animation" id="Animation_75fd3"]
length = 0.001
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_s5pdv")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.666667)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arise"]
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xrxcc"]

[sub_resource type="Animation" id="Animation_s5pdv"]
resource_name = "arise"
length = 2.00005
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arise"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.201486),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CircleShape2D_s5pdv"), SubResource("CapsuleShape2D_xrxcc")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.201486),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xrxcc"]
resource_name = "attack"
length = 2.00002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.38029, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_qsnke"]
resource_name = "chase"
length = 0.80002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"chase"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.333333), Color(1, 1, 1, 0)]
}

[sub_resource type="CircleShape2D" id="CircleShape2D_75fd3"]

[sub_resource type="Animation" id="Animation_3ni46"]
resource_name = "idle"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arise"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_75fd3")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s5pdv"]

[sub_resource type="Animation" id="Animation_stpnr"]
resource_name = "stop"
length = 1.40002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"stop"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.599296, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.00214, 1.20108),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CapsuleShape2D_s5pdv"), SubResource("CircleShape2D_s5pdv")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.00214, 1.20108),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_stpnr"]
_data = {
&"RESET": SubResource("Animation_75fd3"),
&"arise": SubResource("Animation_s5pdv"),
&"attack": SubResource("Animation_xrxcc"),
&"chase": SubResource("Animation_qsnke"),
&"idle": SubResource("Animation_3ni46"),
&"stop": SubResource("Animation_stpnr")
}

[node name="Ghost" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_s5pdv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.666667)
sprite_frames = SubResource("SpriteFrames_pas7m")
animation = &"arise"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_s5pdv")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionHit" type="CollisionShape2D" parent="hitbox"]
self_modulate = Color(1, 1, 0, 1)
shape = SubResource("CapsuleShape2D_55jtl")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
debug_enabled = true

[node name="PathUpdate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_stpnr")
}
autoplay = "idle"

[node name="Sleep" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="PathUpdate" to="." method="_on_path_update_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Sleep" to="." method="_on_sleep_timeout"]
